--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-
 }
 .app_logo .app__title{
     margin-top: 0.5rem;
@@ -95,6 +94,7 @@ body{
  .app__showcase-info p{
     font-size: 18px;
     font-weight: 400;
+    margin-top: 0.5rem;
  }
 .app__showcase-image{
     flex:4;
@@ -136,13 +136,16 @@ body{
     opacity: 0.7;
 }
 .app__links2 .app__link.medium{
-    background-color: rgb(240, 53, 53);
+    background-color: rgb(245, 80, 80);
 }
 .app__links2 .app__link.medium:hover{
     opacity: 0.7;
 }
 .app__links2 .app__link img{
     margin-right: 1.5rem;
+}
+.text{
+    text-align: start;
 }
 .menu__kapali{
     display: none;
@@ -158,13 +161,13 @@ body{
 }
 .app__blog-catogories .item{
     font-weight: 500;
-    font-size: 18px;
+    font-size: 17px;
     margin-right: 2rem;
     cursor: pointer;
 }
 .app__blog-catogories .item.active{
     color: #D05270;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     border-bottom: 1px solid #D05270;
     padding: 0 2rem;
@@ -349,18 +352,29 @@ body{
 .app__links2 .app__link img{
     margin-right: 0.3rem;
 }
+
 .app__blog-catogories{
-    overflow-x: auto;
+    overflow-x:auto;
+    width: 100%;
     padding: 0;
+
 }
 .app__blog-catogories .item{
     font-size: 13px;
     font-weight: 600;
-    margin-right: 0.4rem;
+    margin-right: 0.2rem;
     white-space: nowrap;
+    padding: 0 1rem; 
 }
 .app__blog-catogories .item.active{
-    font-size: 13px;
+    font-size: 14px;
+    padding: 0 1rem;
+ }
+ .app__blog-catogories .item.active.ilk{
+    margin-left: 100px;
+ }
+ .app__blog-catogories .item.ilk{
+    margin-left: 100px;
  }
  .app__listwrap .app_postcard{
     display: flex;
@@ -369,7 +383,7 @@ body{
     margin: 1rem 0;
  }
  .app__listwrap .app_postcard .postimage{
-    height: 170px;
+    height: 140px;
 }
  .app__listwrap .app_postcard .postdate{
     font-size: 10px;
