yeni eklemeler yapıldı Mail yapıldı

--- a/contact.css
+++ b/contact.css
@@ -150,7 +150,7 @@
     border-bottom: 1px solid #666;
     color: #ddd;
     font-size: 14px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     outline: none;
     transition: border-color .2s;
   }
