--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ body{
     flex-direction: row;
     align-items: center;
 }
+.app_logo .app__title2{
+    display: none;
+}
 .app_logo .app__title{
     margin-top: 0.5rem;
     margin-right: 0.5rem;
@@ -244,13 +247,13 @@ body{
    .app__listwrap .app_postcard .postlink:hover{
     color: #eba3b3;
     border-bottom: 1px solid #eba3b3;
-}
+ }
    .app__showcase-info{
        flex: 6;
        padding: 0 3rem;
    }
    .app__showcase-info h1{
-    font-size: 38px;
+       font-size: 38px;
     }
     .app__showcase-info h3{
         font-size: 29px;
@@ -275,10 +278,21 @@ body{
     }
 }
 @media only screen and (max-width:850px){
- body{
+  body{
     width: 90%;
     margin: auto;
  }
+ .app_logo .app__title{
+   display: none;
+}
+.app_logo .app__title2{
+    display: block;
+    margin-top: 0.2rem;
+    margin-right: 0.2rem;
+    width: 30%;
+    min-width: 270px;
+    height: auto;
+}
  .app__links{
     opacity: 0;
     width: 100%;
@@ -291,38 +305,29 @@ body{
     background-color: #FFFF;
     transition: height 200ms ease-in-out;
 }
-.app__links.active{
+ .app__links.active{
     opacity: 1;
     display: block;   
     z-index: 1; 
     height: 100%;
 }
-.app__links li{
+ .app__links li{
     padding: 1.5rem;
     font-size: 20px;
  }
  .menu__kapali{
     display: block;
  }
- .app_logo .app__title{
-    margin-top: 0.5rem;
-    margin-right: 0.5rem;
-    display: block;
-    width: 40%;
-    min-width:270px;
-    height: auto;
-}
-.purple__logo{
+ .purple__logo{
     display: none;
 }
-.app__showcase-image{
+ .app__showcase-image{
    display: none;
-    
 }
-.bosluk{
-    display: block;
+ .bosluk{
+   display: block;
 }
-.app__showcase-info h1{
+ .app__showcase-info h1{
     font-size: 40px;
  }
  .app__showcase-info h3{
@@ -333,7 +338,7 @@ body{
  }
  .app__showcase{
     display: flex;
-    margin: 5rem 0;
+    margin: 3.5rem 0;
 }
 .app__showcase-info{
     padding: 0;
@@ -352,12 +357,10 @@ body{
 .app__links2 .app__link img{
     margin-right: 0.3rem;
 }
-
 .app__blog-catogories{
     overflow-x:auto;
     width: 100%;
     padding: 0;
-
 }
 .app__blog-catogories .item{
     font-size: 13px;
@@ -447,7 +450,6 @@ body{
       text-align:center;
     }
   }
-  
   .footer-clean .item.social > a {
     font-size:24px;
     width:40px;
@@ -462,23 +464,19 @@ body{
     color:inherit;
     opacity:0.75;
   }
-  
   .footer-clean .item.social > a:hover {
     opacity:0.9;
   }
-  
   @media (max-width:991px) {
     .footer-clean .item.social > a {
       margin-top:40px;
     }
   }
-  
   @media (max-width:767px) {
     .footer-clean .item.social > a {
       margin-top:10px;
     }
   }
-  
   .footer-clean .copyright {
     margin-top:14px;
     margin-bottom:0;
