--- a/slider.css
+++ b/slider.css
@@ -52,7 +52,6 @@ button span {
   display: none;
   box-shadow: 10px 10px 20px 0 rgba(94,47,59,0.2);
 }
-
 .img.active {
   display: block;
   animation: fadeImg 0.8s;
@@ -108,3 +107,33 @@ button span {
     opacity: 1;
   }
 }
+
+@media only screen and (max-width:850px){
+
+  .post_detailcontainer{
+    margin-top: 4rem !important;
+    }
+  .container2 {
+    margin: 0 auto;
+    padding: 7px;
+    width: 100%;
+  }
+  button {
+    padding: 1px 0px;
+  }
+  .ptag{
+  margin-top: 5px;
+  }
+  .arrow {
+    padding: 5px;
+    margin: 0px;
+  }
+  .img:hover {
+
+    -ms-transform: scale(1.3); /* IE 9 */
+    -webkit-transform: scale(1.3); /* Safari 3-8 */
+     transform: scale(1.3); 
+   }
+
+ 
+ }
