--- a/contact.css
+++ b/contact.css
@@ -26,7 +26,7 @@
   
   .screen {
     position: relative;
-    background: #3e3e3e;
+    background: #525252;
     border-radius: 15px;
   }
   
@@ -108,7 +108,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    color: #ea1d6f;
+    color: #fff;
     font-size: 26px;
   }
   
@@ -120,12 +120,12 @@
     bottom: -10px;
     width: 25px;
     height: 4px;
-    background: #ea1d6f;
+    background: rgb(177, 176, 176);
   }
   
   .app-contact {
     margin-top: auto;
-    font-size: 8px;
+    font-size: 10px;
     color: #888;
   }
   
@@ -141,20 +141,27 @@
     margin-bottom: 0;
     text-align: right;
   }
-  
+  .app-title .colors{
+    color:  rgb(177, 176, 176) !important;
+  }
   .app-form-control {
     width: 100%;
     padding: 10px 0;
     background: none;
     border: none;
     border-bottom: 1px solid #666;
-    color: #ddd;
+    color:  rgb(177, 176, 176);
     font-size: 14px;
     /* text-transform: uppercase; */
     outline: none;
     transition: border-color .2s;
   }
-  
+  .app-form-control.textarea{
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 700  !important;
+    letter-spacing: 1.4px  !important;
+  }
+
   .app-form-control::placeholder {
     color: #666;
   }
@@ -166,7 +173,7 @@
   .app-form-button {
     background: none;
     border: none;
-    color: #ea1d6f;
+    color:  rgb(177, 176, 176);
     font-size: 14px;
     cursor: pointer;
     outline: none;
