--- a/style.css
+++ b/style.css
@@ -124,6 +124,14 @@ body{
     min-width: 35%;
     border-radius: 80%;
 }
+#example
+{
+  cursor:pointer;
+}
+#example2
+{
+  cursor:pointer;
+}
 /* .app__showcase-image:hover {
     opacity: 0.5;
   } */
@@ -207,9 +215,8 @@ body{
     margin: 2rem 0;
  }
  .app__listwrap .app_postcard .postimage{
-    height: 290px;
+    height: 284px;
     width: max-content;
-
 }
  .app__listwrap .app_postcard .postdate{
     font-size: 14px;
@@ -248,9 +255,10 @@ body{
     text-align: center;
     margin: 5rem 0;
 }
+
 @media only screen and (max-width:1600px){
     .app__listwrap .app_postcard .postimage{
-       height: 225px;
+       height: 220px;
    }
    .app__listwrap .app_postcard .posttitle{
        font-size: 12px;
@@ -293,7 +301,7 @@ body{
        display: none;
     }
     .app__listwrap .app_postcard .postimage{
-        height: 190px;
+        height: 185px;
     }
 }
 @media only screen and (max-width:850px){
@@ -328,6 +336,7 @@ body{
 .notactivee{
     display: none;
 }
+
  .app__links.active{
     opacity: 1;
     display: block;   
@@ -409,7 +418,7 @@ body{
     margin: 1rem 0;
  }
  .app__listwrap .app_postcard .postimage{
-    height: 140px;
+    height: 130px;
 }
  .app__listwrap .app_postcard .postdate{
     font-size: 10px;
@@ -506,4 +515,5 @@ body{
     font-size:13px;
     opacity:0.6;
   }
+
 
