--- a/post_detail.css
+++ b/post_detail.css
@@ -36,7 +36,7 @@ margin-top: 8rem;
           
     }
     .post_detailcontainer p{
-    font-size: 14px;
+    font-size: 14px !important;
     }
     .post_detailcontainer h1,h2,h3{
         margin-top: 3rem;
