--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    /* background-color: red; */
+    background-color: rgb(252, 251, 251);
 }
 .iconlan{
     width: 20px;
@@ -437,7 +437,6 @@ body{
 .footer-clean {
     margin-left: 1rem;
     padding:50px 0;
-    background-color:#fff;
     color:#4b4c4d;
   }
   
